modal buttons alignment fixed

--- a/src/sass/components/_mediaCard.scss
+++ b/src/sass/components/_mediaCard.scss
@@ -72,7 +72,6 @@
 	&__movieButtons {
 		align-items: center;
 		aspect-ratio: 1;
-		aspect-ratio: 1;
 		background-color: rgba(255, 255, 255, 0.2);
 		border-radius: 1rem;
 		border: 1px solid white;
